--- a/src/docs/tempus-dominus.css
+++ b/src/docs/tempus-dominus.css
@@ -1,4 +1,4 @@
-.visually-hidden, .tempus-dominus-widget table th.next::after, .tempus-dominus-widget table th.prev::after, .tempus-dominus-widget .picker-switch::after, .tempus-dominus-widget .btn[data-action=today]::after, .tempus-dominus-widget .btn[data-action=clear]::after, .tempus-dominus-widget .btn[data-action=togglePeriod]::after, .tempus-dominus-widget .btn[data-action=showMinutes]::after, .tempus-dominus-widget .btn[data-action=showHours]::after, .tempus-dominus-widget .btn[data-action=decrementMinutes]::after, .tempus-dominus-widget .btn[data-action=decrementHours]::after, .tempus-dominus-widget .btn[data-action=incrementMinutes]::after, .tempus-dominus-widget .btn[data-action=incrementHours]::after {
+.visually-hidden, .tempus-dominus-widget [data-action]::after {
   position: absolute !important;
   width: 1px !important;
   height: 1px !important;
@@ -22,6 +22,9 @@
   border-radius: 4px;
   display: none;
   background-color: white;
+}
+.tempus-dominus-widget [data-action]::after {
+  content: attr(title);
 }
 .tempus-dominus-widget.show {
   display: block;
@@ -145,39 +148,8 @@
   width: 38px;
   height: 38px;
 }
-.tempus-dominus-widget .btn[data-action=incrementHours]::after {
-  content: "Increment Hours";
-  /*migrate these to this: https://stackoverflow.com/a/19009056/237917*/
-}
-.tempus-dominus-widget .btn[data-action=incrementMinutes]::after {
-  content: "Increment Minutes";
-}
-.tempus-dominus-widget .btn[data-action=decrementHours]::after {
-  content: "Decrement Hours";
-}
-.tempus-dominus-widget .btn[data-action=decrementMinutes]::after {
-  content: "Decrement Minutes";
-}
-.tempus-dominus-widget .btn[data-action=showHours]::after {
-  content: "Show Hours";
-}
-.tempus-dominus-widget .btn[data-action=showMinutes]::after {
-  content: "Show Minutes";
-}
-.tempus-dominus-widget .btn[data-action=togglePeriod]::after {
-  content: "Toggle AM/PM";
-}
-.tempus-dominus-widget .btn[data-action=clear]::after {
-  content: "Clear the picker";
-}
-.tempus-dominus-widget .btn[data-action=today]::after {
-  content: "Set the date to today";
-}
 .tempus-dominus-widget .picker-switch {
   text-align: center;
-}
-.tempus-dominus-widget .picker-switch::after {
-  content: "Toggle Date and Time Screens";
 }
 .tempus-dominus-widget .picker-switch td {
   padding: 0;
@@ -211,12 +183,6 @@
   background: none;
   color: #6c757d;
   cursor: not-allowed;
-}
-.tempus-dominus-widget table th.prev::after {
-  content: "Previous Month";
-}
-.tempus-dominus-widget table th.next::after {
-  content: "Next Month";
 }
 .tempus-dominus-widget table thead tr:first-child th:hover {
   background: #e9ecef;
