--- a/src/sass/tempus-dominus.scss
+++ b/src/sass/tempus-dominus.scss
@@ -1,6 +1,6 @@
 $bs-datetimepicker-timepicker-font-size: 1.2em !default;
 $bs-datetimepicker-active-bg: #0d6efd !default;
-$bs-datetimepicker-active-color: #ff !default;
+$bs-datetimepicker-active-color: #fff !default;
 $bs-datetimepicker-border-radius: .25rem !default;
 $bs-datetimepicker-btn-hover-bg: #e9ecef !default;
 $bs-datetimepicker-disabled-color: #6c757d !default;
@@ -324,15 +324,6 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
       height: 27px;
       line-height: 27px;
     }
-  }
-
-  .timepicker .timepicker-picker a.btn {
-    color: $bs-datetimepicker-buttons-color;
-    color: var(--blue, #{$bs-datetimepicker-buttons-color});
-  }
-
-  .timepicker .timepicker-picker a.btn:hover {
-    color: $bs-datetimepicker-buttons-color-dark;
   }
 
   &.tempus-dominus-widget-readonly {
