--- a/src/sass/tempus-dominus.scss
+++ b/src/sass/tempus-dominus.scss
@@ -28,25 +28,8 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
   cursor: pointer;
 }
 
+//popper
 .tempus-dominus-widget {
-  list-style: none;
-  margin: 2px 0;
-  padding: 4px;
-  width: 18rem;
-  border-radius: 4px;
-  display: none;
-  background-color:white;
-
-  [data-action]::after {
-    @extend .visually-hidden;
-    content: attr(title);
-  }
-
-  &.show {
-    display: block;
-  }
-
-  //popper
   .arrow,
   .arrow::before {
     position: absolute;
@@ -64,23 +47,42 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
     content: '';
     transform: rotate(45deg);
   }
+}
 
-  [data-popper-placement^='top'] > .arrow {
-    bottom: -4px;
+.tempus-dominus-widget[data-popper-placement^='top'] > .arrow {
+  bottom: -4px;
+}
+
+.tempus-dominus-widget[data-popper-placement^='bottom'] > .arrow {
+  top: -4px;
+}
+
+.tempus-dominus-widget[data-popper-placement^='left'] > .arrow {
+  right: -4px;
+}
+
+.tempus-dominus-widget[data-popper-placement^='right'] > .arrow {
+  left: -4px;
+}
+//end popper
+
+.tempus-dominus-widget {
+  list-style: none;
+  margin: 2px 0;
+  padding: 4px;
+  width: 18rem;
+  border-radius: 4px;
+  display: none;
+  background-color:white;
+
+  [data-action]::after {
+    @extend .visually-hidden;
+    content: attr(title);
   }
 
-  [data-popper-placement^='bottom'] > .arrow {
-    top: -4px;
+  &.show {
+    display: block;
   }
-
-  [data-popper-placement^='left'] > .arrow {
-    right: -4px;
-  }
-
-  [data-popper-placement^='right'] > .arrow {
-    left: -4px;
-  }
-  //end popper
 
   .td-collapse {
     &:not(.show) {
