--- a/src/docs/tempus-dominus.css
+++ b/src/docs/tempus-dominus.css
@@ -18,10 +18,13 @@
   list-style: none;
   margin: 2px 0;
   padding: 4px;
-  width: 14rem;
+  width: 19rem;
   border-radius: 4px;
   display: none;
   background-color: white;
+  /*div[data-action] {
+    padding: 6px 0;
+  }*/
 }
 .tempus-dominus-widget [data-action]::after {
   content: attr(title);
@@ -128,10 +131,7 @@
 .tempus-dominus-widget.wider {
   width: 16rem;
 }
-.tempus-dominus-widget span[data-action] {
-  padding: 6px 0;
-}
-.tempus-dominus-widget span[data-action]:active {
+.tempus-dominus-widget div[data-action]:active {
   box-shadow: none;
 }
 .tempus-dominus-widget .timepicker-hour, .tempus-dominus-widget .timepicker-minute, .tempus-dominus-widget .timepicker-second {
@@ -158,7 +158,7 @@
   width: auto;
   line-height: inherit;
 }
-.tempus-dominus-widget .picker-switch td span {
+.tempus-dominus-widget .picker-switch td div {
   line-height: 2.5;
   height: 2.5em;
   width: 100%;
@@ -167,33 +167,41 @@
   width: 100%;
   margin: 0;
 }
-.tempus-dominus-widget table td, .tempus-dominus-widget table th {
+.tempus-dominus-widget table tr {
+  border-color: inherit;
+  border-style: solid;
+  border-width: 0;
+}
+.tempus-dominus-widget table tr td, .tempus-dominus-widget table tr th {
   text-align: center;
   border-radius: 0.25rem;
 }
-.tempus-dominus-widget table th {
+.tempus-dominus-widget table tr th {
   height: 20px;
   line-height: 20px;
   width: 20px;
 }
-.tempus-dominus-widget table th.picker-switch {
+.tempus-dominus-widget table tr th.picker-switch {
   width: 145px;
 }
-.tempus-dominus-widget table th.disabled, .tempus-dominus-widget table th.disabled:hover {
+.tempus-dominus-widget table tr th.disabled, .tempus-dominus-widget table tr th.disabled:hover {
   background: none;
   color: #6c757d;
   cursor: not-allowed;
 }
-.tempus-dominus-widget table thead tr:first-child th:hover {
+.tempus-dominus-widget table tr thead tr:first-child th:hover {
   background: #e9ecef;
 }
-.tempus-dominus-widget table td {
-  height: 20px;
-  line-height: 20px;
-  width: 20px;
+.tempus-dominus-widget table tr td {
+  position: relative;
+  height: 0;
+  line-height: 0;
+  text-align: center;
+  outline: none;
+  cursor: pointer;
+  padding: 0.3rem;
 }
-.tempus-dominus-widget table td span {
-  display: inline-block;
+.tempus-dominus-widget table tr td div {
   width: 20px;
   height: 20px;
   line-height: 20px;
@@ -201,36 +209,36 @@
   margin-bottom: 2px;
   border-radius: 0.25rem;
 }
-.tempus-dominus-widget table td span:hover {
+.tempus-dominus-widget table tr td div:hover {
   background: #e9ecef;
 }
-.tempus-dominus-widget table td span.active {
+.tempus-dominus-widget table tr td div.active {
   background-color: #0d6efd;
   color: #fff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
-.tempus-dominus-widget table td span.active.today:before {
+.tempus-dominus-widget table tr td div.active.today:before {
   border-bottom-color: #fff;
 }
-.tempus-dominus-widget table td span.old, .tempus-dominus-widget table td span.new {
+.tempus-dominus-widget table tr td div.old, .tempus-dominus-widget table tr td div.new {
   color: #6c757d;
 }
-.tempus-dominus-widget table td span.disabled, .tempus-dominus-widget table td span.disabled:hover {
+.tempus-dominus-widget table tr td div.disabled, .tempus-dominus-widget table tr td div.disabled:hover {
   background: none;
   color: #6c757d;
   cursor: not-allowed;
 }
-.tempus-dominus-widget table td span.cw {
+.tempus-dominus-widget table tr td div.cw {
   font-size: 0.8em;
   height: 20px;
   line-height: 20px;
   color: #6c757d;
   cursor: default;
 }
-.tempus-dominus-widget table td span.today {
+.tempus-dominus-widget table tr td div.today {
   position: relative;
 }
-.tempus-dominus-widget table td span.today:before {
+.tempus-dominus-widget table tr td div.today:before {
   content: "";
   display: inline-block;
   border: solid transparent;
