--- a/src/sass/tempus-dominus.scss
+++ b/src/sass/tempus-dominus.scss
@@ -32,10 +32,10 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
   list-style: none;
   margin: 2px 0;
   padding: 4px;
-  width: 14rem;
+  width: 19rem;
   border-radius: 4px;
   display: none;
-  background-color:white;
+  background-color: white;
 
   [data-action]::after {
     @extend .visually-hidden;
@@ -80,6 +80,7 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
   [data-popper-placement^='right'] > .arrow {
     left: -4px;
   }
+
   //end popper
 
   .td-collapse {
@@ -172,11 +173,11 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
     width: 16rem;
   }
 
-  span[data-action] {
+  /*div[data-action] {
     padding: 6px 0;
-  }
+  }*/
 
-  span[data-action]:active {
+  div[data-action]:active {
     box-shadow: none;
   }
 
@@ -207,7 +208,7 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
       width: auto;
       line-height: inherit;
 
-      span {
+      div {
         line-height: 2.5;
         height: 2.5em;
         width: 100%;
@@ -219,67 +220,24 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
     width: 100%;
     margin: 0;
 
+    & tr {
+      border-color: inherit;
+      border-style: solid;
+      border-width: 0;
 
-    & td,
-    & th {
-      text-align: center;
-      border-radius: $bs-datetimepicker-border-radius;
-    }
-
-    & th {
-      height: 20px;
-      line-height: 20px;
-      width: 20px;
-
-      &.picker-switch {
-        width: 145px;
+      & td,
+      & th {
+        text-align: center;
+        border-radius: $bs-datetimepicker-border-radius;
       }
 
-      &.disabled,
-      &.disabled:hover {
-        background: none;
-        color: $bs-datetimepicker-disabled-color;
-        cursor: not-allowed;
-      }
-    }
-
-    & thead tr:first-child th {
-      &:hover {
-        background: $bs-datetimepicker-btn-hover-bg;
-      }
-    }
-
-    & td {
-      height: 20px;
-      line-height: 20px;
-      width: 20px;
-
-      span {
-        display: inline-block;
-        width: 20px;
+      & th {
         height: 20px;
         line-height: 20px;
-        margin-top: 2px;
-        margin-bottom: 2px;
-        border-radius: $bs-datetimepicker-border-radius;
+        width: 20px;
 
-        &:hover {
-          background: $bs-datetimepicker-btn-hover-bg;
-        }
-
-        &.active {
-          background-color: $bs-datetimepicker-active-bg;
-          color: $bs-datetimepicker-active-color;
-          text-shadow: $bs-datetimepicker-text-shadow;
-        }
-
-        &.active.today:before {
-          border-bottom-color: #fff;
-        }
-
-        &.old,
-        &.new {
-          color: $bs-datetimepicker-alternate-color;
+        &.picker-switch {
+          width: 145px;
         }
 
         &.disabled,
@@ -288,31 +246,85 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
           color: $bs-datetimepicker-disabled-color;
           cursor: not-allowed;
         }
+      }
 
-        &.cw {
-          font-size: .8em;
+      & thead tr:first-child th {
+        &:hover {
+          background: $bs-datetimepicker-btn-hover-bg;
+        }
+      }
+
+      & td {
+        //height: 20px;
+        //line-height: 20px;
+        //width: 20px;
+        position: relative;
+        height: 0;
+        line-height: 0;
+        text-align: center;
+        outline: none;
+        cursor: pointer;
+        padding: .3rem;
+
+        div {
+          width: 20px;
           height: 20px;
           line-height: 20px;
-          color: $bs-datetimepicker-alternate-color;
-          cursor: default;
-        }
+          margin-top: 2px;
+          margin-bottom: 2px;
+          border-radius: $bs-datetimepicker-border-radius;
 
-        &.day {
-        }
+          &:hover {
+            background: $bs-datetimepicker-btn-hover-bg;
+          }
 
-        &.today {
-          position: relative;
+          &.active {
+            background-color: $bs-datetimepicker-active-bg;
+            color: $bs-datetimepicker-active-color;
+            text-shadow: $bs-datetimepicker-text-shadow;
+          }
 
-          &:before {
-            content: '';
-            display: inline-block;
-            border: solid transparent;
-            border-width: 0 0 7px 7px;
-            border-bottom-color: $bs-datetimepicker-active-bg;
-            border-top-color: $bs-datetimepicker-secondary-border-color-rgba;
-            position: absolute;
-            bottom: 4px;
-            right: 4px;
+          &.active.today:before {
+            border-bottom-color: #fff;
+          }
+
+          &.old,
+          &.new {
+            color: $bs-datetimepicker-alternate-color;
+          }
+
+          &.disabled,
+          &.disabled:hover {
+            background: none;
+            color: $bs-datetimepicker-disabled-color;
+            cursor: not-allowed;
+          }
+
+          &.cw {
+            font-size: .8em;
+            height: 20px;
+            line-height: 20px;
+            color: $bs-datetimepicker-alternate-color;
+            cursor: default;
+          }
+
+          &.day {
+          }
+
+          &.today {
+            position: relative;
+
+            &:before {
+              content: '';
+              display: inline-block;
+              border: solid transparent;
+              border-width: 0 0 7px 7px;
+              border-bottom-color: $bs-datetimepicker-active-bg;
+              border-top-color: $bs-datetimepicker-secondary-border-color-rgba;
+              position: absolute;
+              bottom: 4px;
+              right: 4px;
+            }
           }
         }
       }
