--- a/src/docs/tempus-dominus.css
+++ b/src/docs/tempus-dominus.css
@@ -1,3 +1,6 @@
+/*
+look at how bootstrap loops through their vars to make a --root section
+ */
 .visually-hidden, .tempus-dominus-widget [data-action]::after {
   position: absolute !important;
   width: 1px !important;
@@ -16,34 +19,46 @@
 
 .tempus-dominus-widget .arrow,
 .tempus-dominus-widget .arrow::before {
+  visibility: hidden;
   position: absolute;
   width: 8px;
   height: 8px;
   background: inherit;
 }
-.tempus-dominus-widget .arrow {
-  visibility: hidden;
-}
 .tempus-dominus-widget .arrow::before {
   visibility: visible;
   content: "";
   transform: rotate(45deg);
+  border-style: solid;
+  border-width: 1px;
 }
 
 .tempus-dominus-widget[data-popper-placement^=top] > .arrow {
   bottom: -4px;
 }
+.tempus-dominus-widget[data-popper-placement^=top] > .arrow::before {
+  border-color: transparent black black transparent;
+}
 
 .tempus-dominus-widget[data-popper-placement^=bottom] > .arrow {
   top: -4px;
+}
+.tempus-dominus-widget[data-popper-placement^=bottom] > .arrow::before {
+  border-color: black transparent transparent black;
 }
 
 .tempus-dominus-widget[data-popper-placement^=left] > .arrow {
   right: -4px;
 }
+.tempus-dominus-widget[data-popper-placement^=left] > .arrow::before {
+  border-color: black black transparent transparent;
+}
 
 .tempus-dominus-widget[data-popper-placement^=right] > .arrow {
   left: -4px;
+}
+.tempus-dominus-widget[data-popper-placement^=right] > .arrow::before {
+  border-color: transparent transparent black black;
 }
 
 .tempus-dominus-widget {
@@ -54,6 +69,7 @@
   border-radius: 4px;
   display: none;
   background-color: white;
+  border: 1px solid black;
   /*div[data-action] {
     padding: 6px 0;
   }*/
