--- a/src/sass/tempus-dominus.scss
+++ b/src/sass/tempus-dominus.scss
@@ -9,8 +9,10 @@ $bs-datetimepicker-secondary-border-color: #ccc !default;
 $bs-datetimepicker-secondary-border-color-rgba: rgba(0, 0, 0, 0.2) !default;
 $bs-datetimepicker-primary-border-color: white !default;
 $bs-datetimepicker-text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !default;
-$bs-datetimepicker-buttons-color: #007bff;
-$bs-datetimepicker-buttons-color-dark: #0056b3;
+
+/*
+look at how bootstrap loops through their vars to make a --root section
+ */
 
 .visually-hidden {
   position: absolute !important;
@@ -32,37 +34,48 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
 .tempus-dominus-widget {
   .arrow,
   .arrow::before {
+    visibility: hidden;
     position: absolute;
     width: 8px;
     height: 8px;
     background: inherit;
   }
 
-  .arrow {
-    visibility: hidden;
-  }
-
   .arrow::before {
-    visibility: visible;
-    content: '';
-    transform: rotate(45deg);
+      visibility: visible;
+      content: '';
+      transform: rotate(45deg);
+      border-style: solid;
+      border-width: 1px;
   }
 }
 
 .tempus-dominus-widget[data-popper-placement^='top'] > .arrow {
   bottom: -4px;
+  &::before {
+    border-color: transparent black black transparent;
+  }
 }
 
 .tempus-dominus-widget[data-popper-placement^='bottom'] > .arrow {
   top: -4px;
+  &::before {
+    border-color: black transparent transparent black;
+  }
 }
 
 .tempus-dominus-widget[data-popper-placement^='left'] > .arrow {
   right: -4px;
+  &::before {
+    border-color: black black transparent transparent;
+  }
 }
 
 .tempus-dominus-widget[data-popper-placement^='right'] > .arrow {
   left: -4px;
+  &::before {
+    border-color: transparent transparent black black;
+  }
 }
 //end popper
 
@@ -74,6 +87,7 @@ $bs-datetimepicker-buttons-color-dark: #0056b3;
   border-radius: 4px;
   display: none;
   background-color:white;
+  border: 1px solid black;
 
   [data-action]::after {
     @extend .visually-hidden;
